--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,22 @@
+
+
+management.endpoints.web.exposure.include=*
+spring.output.ansi.enabled=ALWAYS
+
+
+
+
 spring.datasource.url=jdbc:mysql://118.25.47.165:3306/mysql?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=dolphin
 spring.datasource.password=123456dolphin
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maxLifetime=1800000
 
 
 
